Fixed alignment

--- a/mini.css
+++ b/mini.css
@@ -77,6 +77,15 @@
     
 }
 
+ul {
+    padding: 0;
+    list-style-type: none;    
+}
+
+#counters {
+    padding-top:14px;
+}
+
 .timer{
     font-size: 1.5em;
     padding-left: 40px;
